--- a/index.html
+++ b/index.html
@@ -48,51 +48,98 @@
         
         <div class="card-container">
           <div class="card">
-            <swiper-container class="mySwiper" thumbs-swiper=".mySwiper2" loop="true" space-between="10"
+            <swiper-container class="mySwiper" thumbs-swiper=".miniSwipper" loop="true" space-between="10"
               navigation="true">
 
-              <swiper-slide>
-                <img src="assets/img1.png" />
+              <swiper-slide class="medidas">
+                <img src="assets/products/small.png" />
+              </swiper-slide>
+
+                <swiper-slide>
+                <img src="assets/products/preto-1.png" />
               </swiper-slide>
 
               <swiper-slide>
-                <img src="assets/img2.png" />
+                <img src="assets/products/preto-2.png" />
               </swiper-slide>
 
               <swiper-slide>
-                <img src="assets/img3.png" />
+                <img src="assets/products/preto-3.png" />
               </swiper-slide>
 
               <swiper-slide>
-                <img src="assets/img4.png" />
+                <img src="assets/products/preto-4.png" />
+              </swiper-slide>
+
+              <swiper-slide>
+                <img src="assets/products/preto-5.png" />
+              </swiper-slide>
+
+              <swiper-slide>
+                <img src="assets/products/preto-6.png" />
+              </swiper-slide>
+
+              <swiper-slide>
+                <img src="assets/products/preto-7.png" />
+              </swiper-slide>
+
+              <swiper-slide>
+                <img src="assets/products/preto-8.png" />
               </swiper-slide>
             </swiper-container>
 
-            <swiper-container class="mySwiper2 fenrir-Swiper" loop="true" space-between="10" slides-per-view="4" free-mode="true"
+            <swiper-container class="miniSwipper fenrir-Swiper padding-Swippper" loop="false" space-between="10" slides-per-view="4" free-mode="true"
               watch-slides-progress="true" data-visible="desktop">
 
               <swiper-slide>
-                <img src="assets/img-mini1.png" />
+                <img src="assets/products/small.png" />
+              </swiper-slide>
+
+              <swiper-slide class="none">
+                <img src="assets/products/medium.png" />
               </swiper-slide>
 
               <swiper-slide>
-                <img src="assets/img-mini2.png" />
+                <img src="assets/products/preto-1.png" />
               </swiper-slide>
 
               <swiper-slide>
-                <img src="assets/img-mini3.png" />
+                <img src="assets/products/preto-2.png" />
               </swiper-slide>
 
               <swiper-slide>
-                <img src="assets/img-mini4.png" />
+                <img src="assets/products/preto-3.png" />
+              </swiper-slide>
+
+              <swiper-slide>
+                <img src="assets/products/preto-4.png" />
+              </swiper-slide>
+
+              <swiper-slide>
+                <img src="assets/products/preto-5.png" />
+              </swiper-slide>
+
+              <swiper-slide>
+                <img src="assets/products/preto-6.png" />
+              </swiper-slide>
+
+              <swiper-slide>
+                <img src="assets/products/preto-7.png" />
+              </swiper-slide>
+
+              <swiper-slide>
+                <img src="assets/products/preto-8.png" />
               </swiper-slide>
             </swiper-container>
 
-            <h3>TRISKELE - Bandeja Organizadora</h3>
+            <h3 class="product-name">TORII BLACK - P</h3>
 
             <div class="container-info">
               <div class="product-info">
-                <span>R$ 280</span>
+                <div>
+                  <span>R$ 599,90</span>
+                  <span class="frete">+ frete</span>
+                </div>
 
                 <div class="container-select">
                   <div id="category-select">
@@ -113,72 +160,118 @@
 
                   <ul id="option-1" class="option-container">
                     <li class="option">
-                      <input type="radio" name="size-product-1" value="https://www.youtube.com/watch?v=oUTc5mdP_Cw&list=RDoUTc5mdP_Cw&start_radio=1">
-                      <span>Pequeno</span></input>
+                      <input type="radio" class="small" name="size-product-1" value="https://pag.ae/7-htnGvS8/button" checked="true">
+                        <span>Pequeno</span>
+                      </input>
                     </li>
-                    <li class="option"><input type="radio" name="size-product-1" value="https://www.youtube.com/watch?v=1aLFhjVx0Jo&list=RDoUTc5mdP_Cw&index=7" >
-                      <span>Médio</span></input>
+                    <li class="option">
+                      <input type="radio" class="medium" name="size-product-1" value="https://pag.ae/7-htjwFCP/button">
+                        <span>Médio</span>
+                      </input>
                     </li>
-                    <li class="option"><input type="radio" name="size-product-1" value="https://www.youtube.com/watch?v=93li1kKpR8Y&list=RDoUTc5mdP_Cw&index=7">
-                      <span>Grande</></input>
                     </li>
                   </ul>
                 </div>
               </div>
 
-              <button class="buy-button">comprar</button>
+              <button class="buy-button" href="https://pag.ae/7-htnGvS8/button" title="Pagar com PagSeguro">comprar</button>
             </div>
-
-            <!-- <button class="3D">visualização 3d</button> -->
           </div>
 
           <div class="card">
-            <swiper-container class="mySwiper" thumbs-swiper=".mySwiper2" loop="true" space-between="10"
+            <swiper-container class="mySwiper" thumbs-swiper=".miniSwipper2" loop="true" space-between="10"
               navigation="true">
 
-              <swiper-slide>
-                <img src="assets/img1.png" />
+              <swiper-slide class="medidas">
+                <img src="assets/products/small.png"/>
               </swiper-slide>
 
               <swiper-slide>
-                <img src="assets/img2.png" />
+                <img src="assets/products/branco-1.png" />
               </swiper-slide>
 
               <swiper-slide>
-                <img src="assets/img3.png" />
+                <img src="assets/products/branco-2.png" />
               </swiper-slide>
 
               <swiper-slide>
-                <img src="assets/img4.png" />
+                <img src="assets/products/branco-3.png" />
+              </swiper-slide>
+
+              <swiper-slide>
+                <img src="assets/products/branco-4.png" />
+              </swiper-slide>
+
+              <swiper-slide>
+                <img src="assets/products/branco-5.png" />
+              </swiper-slide>
+
+              <swiper-slide>
+                <img src="assets/products/branco-6.png" />
+              </swiper-slide>
+
+              <swiper-slide>
+                <img src="assets/products/branco-7.png" />
+              </swiper-slide>
+
+              <swiper-slide>
+                <img src="assets/products/branco-8.png" />
               </swiper-slide>
             </swiper-container>
 
-            <swiper-container class="mySwiper2" loop="true" space-between="10" slides-per-view="4" free-mode="true"
+            <swiper-container class="miniSwipper2 fenrir-Swiper padding-Swippper" loop="false" space-between="10" slides-per-view="4" free-mode="true"
               watch-slides-progress="true" data-visible="desktop">
 
               <swiper-slide>
-                <img src="assets/img-mini1.png" />
+                <img src="assets/products/small.png" />
+              </swiper-slide>
+
+              <swiper-slide class="none">
+                <img src="assets/products/medium.png" />
               </swiper-slide>
 
               <swiper-slide>
-                <img src="assets/img-mini2.png" />
+                <img src="assets/products/branco-1.png" />
               </swiper-slide>
 
               <swiper-slide>
-                <img src="assets/img-mini3.png" />
+                <img src="assets/products/branco-2.png" />
               </swiper-slide>
 
               <swiper-slide>
-                <img src="assets/img-mini4.png" />
+                <img src="assets/products/branco-3.png" />
               </swiper-slide>
+
+              <swiper-slide>
+                <img src="assets/products/branco-4.png" />
+              </swiper-slide>
+
+              <swiper-slide>
+                <img src="assets/products/branco-5.png" />
+              </swiper-slide>
+
+              <swiper-slide>
+                <img src="assets/products/branco-6.png" />
+              </swiper-slide>
+
+              <swiper-slide>
+                <img src="assets/products/branco-7.png" />
+              </swiper-slide>
+
+              <swiper-slide>
+                <img src="assets/products/branco-8.png" />
+              </swiper-slide>
+
             </swiper-container>
 
-            <h3>TRISKELE - Bandeja Organizadora</h3>
+            <h3 class="product-name">TORII WHITE - P</h3>
 
             <div class="container-info">
               <div class="product-info">
-                <span>R$ 280</span>
-
+                <div>
+                  <span>R$ 599,90</span>
+                  <span class="frete">+ frete</span>
+                </div>
                 <div class="container-select">
                   <div id="category-select">
                     <label for="product-2">Tamanho</label>
@@ -198,185 +291,20 @@
 
                   <ul id="option-2" class="option-container">
                     <li class="option">
-                      <input type="radio" name="size-product-1" value="https://www.youtube.com/watch?v=oUTc5mdP_Cw&list=RDoUTc5mdP_Cw&start_radio=1">
-                      <span>Pequeno</span></input>
+                      <input type="radio" class="small" name="size-product-1" value="https://pag.ae/7-htohkQo/button">
+                        <span>Pequeno</span>
+                      </input>
                     </li>
-                    <li class="option"><input type="radio" name="size-product-1" value="https://www.youtube.com/watch?v=1aLFhjVx0Jo&list=RDoUTc5mdP_Cw&index=7" >
-                      <span>Médio</span></input>
-                    </li>
-                    <li class="option"><input type="radio" name="size-product-1" value="https://www.youtube.com/watch?v=93li1kKpR8Y&list=RDoUTc5mdP_Cw&index=7">
-                      <span>Grande</></input>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-
-              <button class="buy-button">comprar</button>
-            </div>
-          </div>
-
-          <div class="card">
-            <swiper-container class="mySwiper" thumbs-swiper=".mySwiper2" loop="true" space-between="10"
-              navigation="true">
-
-              <swiper-slide>
-                <img src="assets/img1.png" />
-              </swiper-slide>
-
-              <swiper-slide>
-                <img src="assets/img2.png" />
-              </swiper-slide>
-
-              <swiper-slide>
-                <img src="assets/img3.png" />
-              </swiper-slide>
-
-              <swiper-slide>
-                <img src="assets/img4.png" />
-              </swiper-slide>
-            </swiper-container>
-
-            <swiper-container class="mySwiper2" loop="true" space-between="10" slides-per-view="4" free-mode="true"
-              watch-slides-progress="true" data-visible="desktop">
-
-              <swiper-slide>
-                <img src="assets/img-mini1.png" />
-              </swiper-slide>
-
-              <swiper-slide>
-                <img src="assets/img-mini2.png" />
-              </swiper-slide>
-
-              <swiper-slide>
-                <img src="assets/img-mini3.png" />
-              </swiper-slide>
-
-              <swiper-slide>
-                <img src="assets/img-mini4.png" />
-              </swiper-slide>
-            </swiper-container>
-
-            <h3>TRISKELE - Bandeja Organizadora</h3>
-
-            <div class="container-info">
-              <div class="product-info">
-                <span>R$ 280</span>
-
-                <div class="container-select">
-                  <div id="category-select">
-                    <label for="product-2">Tamanho</label>
-                    <input type="checkbox" id="product-2">
-
-                    <div id="select-button">
-                      <div id="selected-value">
-
-                        <div id="chevrons">
-                          <i data-lucide="chevron-down"></i>
-                          <i data-lucide="chevron-up"></i>
-                        </div>
-
-                      </div>
-                    </div>
-                  </div>
-
-                  <ul id="option-2" class="option-container">
                     <li class="option">
-                      <input type="radio" name="size-product-1" value="https://www.youtube.com/watch?v=oUTc5mdP_Cw&list=RDoUTc5mdP_Cw&start_radio=1">
-                      <span>Pequeno</span></input>
-                    </li>
-                    <li class="option"><input type="radio" name="size-product-1" value="https://www.youtube.com/watch?v=1aLFhjVx0Jo&list=RDoUTc5mdP_Cw&index=7" >
-                      <span>Médio</span></input>
-                    </li>
-                    <li class="option"><input type="radio" name="size-product-1" value="https://www.youtube.com/watch?v=93li1kKpR8Y&list=RDoUTc5mdP_Cw&index=7">
-                      <span>Grande</></input>
+                      <input type="radio" class="medium" name="size-product-1" value="https://pag.ae/7-htm2hX3/button" >
+                        <span>Médio</span>
+                      </input>
                     </li>
                   </ul>
                 </div>
               </div>
 
-              <button class="buy-button">comprar</button>
-            </div>
-          </div>
-          <div class="card">
-            <swiper-container class="mySwiper" thumbs-swiper=".mySwiper2" loop="true" space-between="10"
-              navigation="true">
-
-              <swiper-slide>
-                <img src="assets/img1.png" />
-              </swiper-slide>
-
-              <swiper-slide>
-                <img src="assets/img2.png" />
-              </swiper-slide>
-
-              <swiper-slide>
-                <img src="assets/img3.png" />
-              </swiper-slide>
-
-              <swiper-slide>
-                <img src="assets/img4.png" />
-              </swiper-slide>
-            </swiper-container>
-
-            <swiper-container class="mySwiper2" loop="true" space-between="10" slides-per-view="4" free-mode="true"
-              watch-slides-progress="true" data-visible="desktop">
-
-              <swiper-slide>
-                <img src="assets/img-mini1.png" />
-              </swiper-slide>
-
-              <swiper-slide>
-                <img src="assets/img-mini2.png" />
-              </swiper-slide>
-
-              <swiper-slide>
-                <img src="assets/img-mini3.png" />
-              </swiper-slide>
-
-              <swiper-slide>
-                <img src="assets/img-mini4.png" />
-              </swiper-slide>
-            </swiper-container>
-
-            <h3>TRISKELE - Bandeja Organizadora</h3>
-
-            <div class="container-info">
-              <div class="product-info">
-                <span>R$ 280</span>
-
-                <div class="container-select">
-                  <div id="category-select">
-                    <label for="product-2">Tamanho</label>
-                    <input type="checkbox" id="product-2">
-
-                    <div id="select-button">
-                      <div id="selected-value">
-
-                        <div id="chevrons">
-                          <i data-lucide="chevron-down"></i>
-                          <i data-lucide="chevron-up"></i>
-                        </div>
-
-                      </div>
-                    </div>
-                  </div>
-
-                  <ul id="option-2" class="option-container">
-                    <li class="option">
-                      <input type="radio" name="size-product-1" value="https://www.youtube.com/watch?v=oUTc5mdP_Cw&list=RDoUTc5mdP_Cw&start_radio=1">
-                      <span>Pequeno</span></input>
-                    </li>
-                    <li class="option"><input type="radio" name="size-product-1" value="https://www.youtube.com/watch?v=1aLFhjVx0Jo&list=RDoUTc5mdP_Cw&index=7" >
-                      <span>Médio</span></input>
-                    </li>
-                    <li class="option"><input type="radio" name="size-product-1" value="https://www.youtube.com/watch?v=93li1kKpR8Y&list=RDoUTc5mdP_Cw&index=7">
-                      <span>Grande</></input>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-
-              <button class="buy-button">comprar</button>
+              <button class="buy-button" href="https://pag.ae/7-htohkQo/button" title="Pagar com PagSeguro">comprar</button>
             </div>
           </div>
         </div>
