corrigido imagem no mini swiper

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <img src="assets/products/small.png" />
               </swiper-slide>
 
-                <swiper-slide>
+              <swiper-slide>
                 <img src="assets/products/preto-1.png" />
               </swiper-slide>
 
@@ -91,12 +91,8 @@
             <swiper-container class="miniSwipper fenrir-Swiper padding-Swippper" loop="false" space-between="10" slides-per-view="4" free-mode="true"
               watch-slides-progress="true" data-visible="desktop">
 
-              <swiper-slide>
+              <swiper-slide class="miniSwiper-medidas">
                 <img src="assets/products/small.png" />
-              </swiper-slide>
-
-              <swiper-slide class="none">
-                <img src="assets/products/medium.png" />
               </swiper-slide>
 
               <swiper-slide>
@@ -222,12 +218,8 @@
             <swiper-container class="miniSwipper2 fenrir-Swiper padding-Swippper" loop="false" space-between="10" slides-per-view="4" free-mode="true"
               watch-slides-progress="true" data-visible="desktop">
 
-              <swiper-slide>
+              <swiper-slide class="miniSwiper-medidas">
                 <img src="assets/products/small.png" />
-              </swiper-slide>
-
-              <swiper-slide class="none">
-                <img src="assets/products/medium.png" />
               </swiper-slide>
 
               <swiper-slide>
