adicionar redes sociais e remover o facebook

--- a/index.html
+++ b/index.html
@@ -486,19 +486,15 @@
       <div class="social-media">
         <span>encontre-nos</span>
         <div class="midias">
-          <a href="">
+          <a href="https://www.instagram.com/fenrirdesign.br/" target="_blank">
             <img src="assets/insta.png" alt="">
           </a>
 
-          <a href="">
-            <img src="assets/face.png" alt="">
-          </a>
-
-          <a href="">
+          <a href="https://www.linkedin.com/in/fenrir-design-ltda-416a36296?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BqnifYUN0RuqIxaJWOp1O9A%3D%3D" target="_blank">
             <img src="assets/linkedin.png" alt="">
           </a>
 
-          <a href="">
+          <a href="https://api.whatsapp.com/send?phone=5541999152144" target="_blank">
             <img src="assets/wpp.png" alt="">
           </a>
         </div>
